# skill_assessment

./: .env.example  .gitignore  README.md  pyproject.toml  run_http.ps1
docs/: EXAM_OPEN_QUESTIONS.md  EXAM_SCENARIO.md  PLANNED_WORK_AND_BACKLOG.md  README.md  REGULATIONS_V2.md  SUMMIT_FOLLOWUP.md  TESTING.md  scenario_pismennyy_opros_i_ekzamen.txt  top20_positions_key_skills.xlsx
scripts/: build_classifier_management_sales_xlsx.py  build_regulations_v2_from_project_matrices.py  build_skills_register_xlsx.py  build_top20_positions_key_skills_xlsx.py  export_position_skills_normalized.py  route_gap_smoke_check.py  telegram_bot_smoke_check.py  write_competency_postgres_seed_sql.py  write_kpi_postgres_seed_sql.py
skill_assessment/: __init__.py  __main__.py  bootstrap.py  env.py  reload_watcher.py  router.py  runner.py  telegram_runtime.py  telegram_worker.py
skill_assessment/adapters/: __init__.py  telegram_outbound.py
skill_assessment/data/: __init__.py  top20_position_kpis.py  top20_position_skills.py
skill_assessment/domain/: __init__.py  entities.py  examination_entities.py  examination_scoring.py
skill_assessment/infrastructure/: __init__.py  db_models.py
skill_assessment/integration/: __init__.py  hr_core.py  telegram_poller.py
skill_assessment/schemas/: __init__.py  api.py  examination_api.py
skill_assessment/services/: __init__.py  assessment_service.py  catalog_version_publish.py  catalog_views.py  classifier_import.py  client_matrix_clone.py  (+39 more)
tests/: conftest.py  test_assessment_flow.py  test_client_matrix_clone.py  test_docs_survey_consent.py  test_docs_survey_hr_notify.py  test_docs_survey_time.py  test_domain_examination_scoring.py  test_env_loading.py  test_examination_flow.py  test_examination_question_plan_variation.py  test_examination_session_reopen_after_timeout.py  test_examination_telegram.py  test_hr_core.py  test_hr_session_flags.py  test_part1_fail_fast_cancellation.py  test_runner_timeout_loop_mode.py  test_telegram_dispatcher.py  test_telegram_docs_survey.py  test_telegram_examination_part2_order.py  test_telegram_outbound_integration.py  test_telegram_outbound_payload.py  test_telegram_part2_cases_flow.py
(+9 files in other folders)
