# route: (packaging) | file: pyproject.toml
[project]
name = "skill-assessment"
version = "0.1.0"
description = "Skill assessment module for Typical Infrastructure (optional plugin router)."
readme = "docs/README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "SQLAlchemy>=2.0.30",
  "openpyxl>=3.1.0",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["skill_assessment*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
